:bug: get all the student courses

--- a/MiParcialito/Views/EstudianteLogged/Index.cshtml
+++ b/MiParcialito/Views/EstudianteLogged/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MiParcialito.Models.Inscripcion>
+﻿@model List<MiParcialito.Models.Inscripcion>
 
 @{
     ViewData["Title"] = "Inicio de Sesión Estudiante";
